// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Radio > handles user input correctly 1`] = `
<DocumentFragment>
  <input
    class="radio"
    name="username"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has 'base' ('md') 1`] = `
<DocumentFragment>
  <input
    class="radio radio-md"
    name="base"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has 'large' ('lg') 1`] = `
<DocumentFragment>
  <input
    class="radio radio-lg"
    name="large"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has 'small' ('sm') 1`] = `
<DocumentFragment>
  <input
    class="radio radio-sm"
    name="small"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has 'tiny' ('xs') 1`] = `
<DocumentFragment>
  <input
    class="radio radio-xs"
    name="tiny"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has accent variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="radio radio-accent"
    name="name"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has error variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="radio radio-error"
    name="name"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has info variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="radio radio-info"
    name="name"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has primary variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="radio radio-primary"
    name="name"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has secondary variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="radio radio-secondary"
    name="name"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has success variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="radio radio-success"
    name="name"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > has warning variant 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="radio radio-warning"
    name="name"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > prevent user input when disabled 1`] = `
<DocumentFragment>
  <input
    class="radio"
    disabled=""
    name="username"
    type="radio"
  />
</DocumentFragment>
`;

exports[`Radio > renders with the correct initial state 1`] = `
<DocumentFragment>
  <input
    checked=""
    class="radio"
    name="username"
    type="radio"
  />
</DocumentFragment>
`;
